--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: rgb(15 23 42);
+	background-color: rgb(35, 38, 47);
 }
 
 code {
